Leverage new language features